fix(marquee): fix accidental horizontal scroll

--- a/templates/consonant/blocks/marquee/marquee.css
+++ b/templates/consonant/blocks/marquee/marquee.css
@@ -515,6 +515,11 @@ main .marquee.center .marquee-column:not(.marquee-image) {
         top: 0;
     }
 
+    main .marquee.large .background {
+        width: 100%;
+        height: 100%;
+    }
+
     main .marquee.large .background img,
     main .marquee.large .background video {
         max-height: unset;
